[package]
name = "kagami-crawler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "BFS crawler and indicator extraction for kagami"

[lints]
workspace = true

[dependencies]
kagami-core = { path = "../kagami-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
scraper = "0.22"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
